--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@
     --bark: #232d27;
 
     /* Bioluminescent accents */
-    --glow-cyan: #00ffd5;
-    --glow-cyan-dim: #00ffd540;
+    --glow-cyan: #00ff88;
+    --glow-cyan-dim: #00ff8840;
     --glow-gold: #ffd700;
     --glow-gold-dim: #ffd70030;
     --spore-purple: #b088f9;
@@ -86,8 +86,8 @@
     --moss: #dce5e0;
     --bark: #c8d4cd;
 
-    --glow-cyan: #008b75;
-    --glow-cyan-dim: #008b7530;
+    --glow-cyan: #047857;
+    --glow-cyan-dim: #04785730;
     --glow-gold: #b8960a;
     --spore-purple: #7c4dbd;
     --mycelium-white: #1a221d;
